# rocket-test

./: Cargo.toml  Rocket.toml
api/: .env  Cargo.toml
api/src/: lib.rs
api/src/api/: mod.rs
api/src/api/resources/request/: mod.rs  register_user_request.rs  sign_in_request.rs
api/src/api/resources/response/: get_user_response.rs  list_user_response.rs  mod.rs  register_user_response.rs  sign_in_response.rs
api/src/api/routes/: mod.rs  user_routes.rs
api/src/auth/: jwt.rs  mod.rs
api/src/cores/: mod.rs
api/src/cores/database/: database.rs
api/src/cores/errors/: api_error.rs
api/src/database/: database.rs
api/src/errors/: api_error.rs  mod.rs  storage_error.rs
api/src/infrastructure/: mod.rs
api/src/infrastructure/auth/: jwt.rs  mod.rs
api/src/infrastructure/services/: item_service.rs  user_service.rs
api/src/models/: item.rs  user.rs
api/src/routes/: user_routes.rs
api/src/services/: item_service.rs  user_service.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20221115_163225_items.rs
src/: main.rs
