[package]
name = "rocket-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
chrono = { version = "0.4.22", features = ["serde"] }
jsonwebtoken = "8.1.1"
bcrypt = "0.13.0"
uuid = { version = "1.2.1", features = ["serde", "v4"] }
dotenv = "0.15.0"
async-trait = { version = "0.1" }
sea-orm-rocket = "0.5.1"
sea-orm = { version = "0.10.1", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
] }
migration = { path = "../migration" }
