[package]
name = "rocket-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
chrono = { version = "0.4.24", features = ["serde"] }
jsonwebtoken = "8.3.0"
bcrypt = "0.13.0"
uuid = { version = "1.3.2", features = ["serde", "v4"] }
dotenv = "0.15.0"
async-trait = { version = "0.1" }
sea-orm-rocket = "0.5.2"
sea-orm = { version = "0.11.3", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
] }
migration = { path = "../migration" }
